Add some cosmetic css properties to sshkey textarea

--- a/htdocs/css/self-service-password.css
+++ b/htdocs/css/self-service-password.css
@@ -56,6 +56,13 @@ div#footer {
   width:100%;
 }
 
+textarea#sshkey {
+  font-family: monospace;
+  word-break: break-all;
+  resize: vertical;
+  min-height: 10em;
+}
+
 @media print {
 
   html, body {
