--- a/htdocs/css/self-service-password.css
+++ b/htdocs/css/self-service-password.css
@@ -65,3 +65,19 @@ textarea#sshkey {
   }
 
 }
+
+.password-toggle-icon {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  z-index: 999;
+}
+
+.password-toggle-icon i {
+  font-size: 18px;
+  line-height: 1;
+  color: black;
+  transition: color 0.3s ease-in-out;
+}
