Fix of password input right borders after addition of eyes

--- a/htdocs/css/self-service-password.css
+++ b/htdocs/css/self-service-password.css
@@ -66,6 +66,11 @@ textarea#sshkey {
 
 }
 
+.form-control {
+  border-top-right-radius: var(--bs-border-radius) !important;
+  border-bottom-right-radius: var(--bs-border-radius) !important;
+}
+
 .password-toggle-icon {
   position: absolute;
   top: 50%;
